# good-enough-timecamp-scim-integrations

./: .coverage  .coveragerc  .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  azure_token.py  azuread_fetch.py  bamboohr_fetch.py  docker-compose.yml  docker-entrypoint.sh  env.example  export_hibob_custom_fields.py  factorialhr_fetch.py  fetch_azuread.py  fetch_bamboohr.py  fetch_factorialhr.py  fetch_hibob.py  fetch_ldap.py  http_service.py  ldap_fetch.py  prepare_timecamp_data.py  prepare_timecamp_json_from_fetch.py  pyproject.toml  pytest.ini  remove_empty_groups.py  requirements.txt  timecamp_sync.py  timecamp_sync_time_off.py  timecamp_sync_users.py  timecamp_sync_v2.py  timecamp_users.json.sample  users.json.sample
.github/workflows/: docker-build-push.yml  (+1 more)
common/: api.py  logger.py  storage.py  supervisor_groups.py  transform_config.py  utils.py
docs/: .env.example  README.md  crontab.md  docker.md  fetch_azure.md  fetch_ldap.md  first_run_ldap.md  tests.md  todo.md
samples/: env.example  timecamp_users.sample.json  timecamp_users2.sample.json  users.json.sample
scripts/: display_timecamp_tree.py
src/: __init__.py  structure_display.py
tests/: README.md  TEST_COVERAGE.md  __init__.py  conftest.py  test_api.py  test_config_integration.py  test_display_tree.py  test_export_hibob_custom_fields.py  test_fetch_azuread.py  test_fetch_bamboohr.py  test_fetch_bamboohr_debug.py  test_fetch_hibob.py  test_pipeline_integration.py  test_prepare_timecamp.py  test_supervisor_groups.py  test_sync_time_off.py  test_sync_users.py  test_utils.py
(+34 files in other folders)
