[project]
name = "good-enough-timecamp-scim-integrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.34.0",
    "flask>=2.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "python-ldap>=3.4.0",
    "requests>=2.31.0",
]
